REFACTOR(#52): 떡상, 떡락 키워드 종목명 일치 제거 로직 구현